[package]
name = "stochastic-rewards"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = "0.2.5"
num = "0.4.0"
itertools = "0.10.5"
tch = "0.10.3"
once_cell = "1.17.1"
anyhow = "1.0.69"
rand = "0.8.5"
